--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# --- NEXT.JS / NODE ---
 /node_modules
 /.pnp
 .pnp.*
@@ -30,8 +28,11 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
+# --- SEGURANÇA (CRÍTICO) ---
+# Bloqueia qualquer arquivo de ambiente com chaves
+.env
 .env*
+.env.local
 
 # vercel
 .vercel
@@ -39,3 +40,18 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# --- PYTHON (NOVO) ---
+# Compilados do Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Ambientes Virtuais (se você criar um dia)
+venv/
+.venv/
+env/
+
+# --- ESPECÍFICO DO AUDIO SCRIBE ---
+# Ignora a pasta de uploads temporários (não queremos subir áudios de teste!)
+uploads/
